resources/broken-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/satisfy: any
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    argocd.argoproj.io/instance: broken-ingress
  name: broken-ingress-microservice-chart
  namespace: diego
spec:
  ingressClassName: nginx
  rules:
    - host: dev01.broken.internal.devopslab.pagopa.it
      http:
        paths:
          - backend:
              service:
                name: broken-ingress-microservice-chart
                port:
                  number: 8888
            path: /broken-ingress/status(/|$)(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dev01.broken.internal.devopslab.pagopa.it
      secretName: dev01-broken-internal-devopslab-pagopa-it
